--- a/themes/hugodelab/layouts/partials/head.html
+++ b/themes/hugodelab/layouts/partials/head.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="{{ .Site.Title | safeHTML }}">
   <link rel="canonical" href='{{ .Permalink }}'>
   <title>{{ if not (eq .Title .Site.Title) }}{{ .Title }} &ndash;{{ end }} {{ .Site.Title }}</title>
@@ -18,4 +18,4 @@
   <script src="{{ .Site.BaseURL }}js/dist/main.js"></script>
 
 </head>
-<body>
+<body class="has-navbar-fixed-top">
