--- a/themes/hugodelab/layouts/partials/header.html
+++ b/themes/hugodelab/layouts/partials/header.html
@@ -1,7 +1,23 @@
-<nav class="navbar is-white has-shadow header">
+<nav class="navbar is-fixed-top is-white has-shadow header">
   <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io">
-      <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+
+    <a class="navbar-item" href="">
+      <img src="{{ .Site.Params.Logo }}" width="112" height="28">
     </a>
+
+  </div>
+  
+
+  <div class="navbar-menu">
+
+    <!-- <div class="navbar-item">
+      <p class="control has-icons-left navbar-item">
+        <input class="input" type="text" placeholder="Search...">
+        <span class="icon is-left">
+          <i class="fas fa-search"></i>
+        </span>
+      </p>
+    </div> -->
+
   </div>
 </nav>
